# neutrino

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
cmake/modules/: consumer_v00_lib.cmake  neutrino_consumer_v00_lib.cmake  neutrino_consumer_v00_src_lib.cmake  neutrino_host_v00_lib.cmake  neutrino_producer_v00_lib.cmake  neutrino_producer_v00_src_lib.cmake  neutrino_transport_v00_consumer.cmake  neutrino_transport_v00_consumer_src.cmake  neutrino_transport_v00_producer.cmake  neutrino_transport_v00_producer_src.cmake  neutrino_transport_v00_shared_src.cmake  neutrino_ut.cmake  producer_v00_lib.cmake  ut_v00_lib_gtest.cmake
include/: async_group.hpp  endpoint_pool.hpp  neutrino_consumer.hpp  neutrino_consumer_transport.hpp  neutrino_consumer_transport_shared_mem_win.hpp  neutrino_errors.hpp  neutrino_frames_local.hpp  neutrino_frames_serialized.hpp  neutrino_frames_serialized_native_bo.hpp  neutrino_frames_serialized_network_bo.hpp  neutrino_guest_impl.hpp  neutrino_guest_transport.hpp  neutrino_guest_transport_buffered_st.hpp  neutrino_host_transport.hpp  neutrino_mock.hpp  neutrino_producer.h  neutrino_producer.hpp  neutrino_producer_transport_buffered.hpp  neutrino_shared_mem_initializer_linux.hpp  neutrino_shared_mem_linux.hpp  neutrino_shared_mem_v00_buffer.hpp  neutrino_shared_mem_v00_header.hpp  neutrino_shared_mem_v00_port_exclusive.hpp  neutrino_shared_mem_v00_port_lockfree.hpp  neutrino_shared_mem_v00_port_synchronized.hpp  neutrino_transport.hpp  neutrino_transport_buffered.hpp  neutrino_transport_buffered_endpoint_proxy.hpp  neutrino_transport_buffered_endpoint_proxy_mt.hpp  neutrino_transport_buffered_endpoint_proxy_st.hpp  neutrino_transport_buffered_mt.hpp  neutrino_transport_buffered_st.hpp  neutrino_transport_consumer_config.hpp  neutrino_transport_consumer_proxy_singleton.hpp  neutrino_transport_endpoint_async_posix_handle.hpp  neutrino_transport_producer_config.hpp  neutrino_transport_shared_mem.hpp  neutrino_transport_shared_mem_buffer.hpp  neutrino_transport_shared_mem_endpoint_proxy_mt.hpp  neutrino_transport_shared_mem_endpoint_proxy_st.hpp  (+11 more)
include/transport/: neutrino_transport.hpp  neutrino_transport_consumer_config.hpp  neutrino_transport_consumer_proxy_singleton.hpp  neutrino_transport_producer_config.hpp
include/transport/shared_mem/: neutrino_mappers.hpp  neutrino_transport_shared_mem.hpp  neutrino_transport_shared_mem_consumer_proxy_st.hpp  neutrino_transport_shared_mem_endpoint_proxy_mt.hpp  neutrino_transport_shared_mem_linux.hpp  neutrino_transport_shared_mem_win32.hpp
src/: config.cpp  consumer_config.cpp  consumer_lib.cpp  neutrino_config.hpp  neutrino_consumer_proxy.cpp  neutrino_consumer_proxy_singleton.cpp  neutrino_producer.cpp  neutrino_producer_shared_mem_v00_linux.cpp  neutrino_shared_lib.cpp  producer.cpp  producer_lib.cpp  shared_mem_linux.cpp  ut_lib_gtest.cpp
src/config/: neutrino_consumer_config.cpp  neutrino_producer_config.cpp
src/linux/: producer_config.cpp  shared_mem_buffer_v00.hpp  shared_mem_config.cpp  shared_mem_header_v00.hpp  shared_mem_initializer.cpp  shared_mem_initializer_linux.cpp  shared_mem_v00_buffer.cpp  shared_mem_v00_buffer.hpp  shared_mem_v00_header.cpp  shared_mem_v00_header.hpp  shared_mem_v00_port_exclusive.cpp  shared_mem_v00_port_lockfree.cpp  shared_mem_v00_port_synchronized.cpp
src/transport/: async_group.cpp  consumer_stub_buffered_mt.cpp  consumer_stub_buffered_st.cpp  endpoint_pool.cpp  namedpipe_win32_async_server.cpp  neutrino_consumer_transport_shared_mem_win.cpp  neutrino_guest_transport_buffered_mt.cpp  neutrino_producer_consumer_proxy_singleton.cpp  neutrino_producer_transport_buffered_mt.cpp  neutrino_producer_transport_buffered_st.cpp  neutrion_producer_transport_buffered_st.cpp  shared_mem_endpoint_proxy_mt.cpp  shared_mem_endpoint_proxy_st.cpp  shared_mem_linux.cpp  shared_mem_v00_linux.cpp  shared_mem_win.cpp  shared_mem_win32.cpp  ut_lib_endpoint_async_gtest.cpp  ut_lib_endpoint_win32_gtest.cpp  ut_lib_gtest.cpp  ut_shared_mem_win_endpoint_proxy_gtest.cpp  ut_shared_mem_win_gtest.cpp  win32_completition_port_data.cpp  winsock2_win32_async_client_endpoint.cpp  winsock2_win32_async_server.cpp
src/ut/: mock_lib.cpp  neutrino_mock.hpp
src/v00/: neutrino_frames_serialized_network_bo.cpp  neutrino_frames_serialized_network_bo_win32.cpp  neutrino_transport.cpp  transport_lib.cpp  ut_lib_gtest.cpp
ut/: mock_lib.cpp  shared_mem_v00_buffer_ut.cpp  shared_mem_v00_synchronized_ut.cpp  ut_lib_gtest.cpp
ut/deprecated/: ut_shared_mem_win_endpoint_proxy_gtest.cpp
